[tool.poetry]
name = "ks_utils"
version = "0.1.0"
description = "Private library proivde common utilities shared among kuri service"
authors = ["Eric Lee <ericstone.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aliyun-mns-sdk = "^1.1.6"
Django = "^3.2.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
